1st draft slider for the phases section

--- a/guides-and-toolkits/colours/index.html
+++ b/guides-and-toolkits/colours/index.html
@@ -2,7 +2,7 @@
 layout: gsdm
 title: GOV.UK colour palettes
 status: draft
-css: ../css/colours.css
+css: /assets/stylesheets/colours.css
 ---
 
 <p>This is the standard GOV.UK colour palette. We recommend you use 
