--- a/guides-and-toolkits/phases/index-2.html
+++ b/guides-and-toolkits/phases/index-2.html
@@ -1,6 +1,7 @@
 ---
 layout: gsdm
 title: Product phases
+subtitle: How a Digital by Default project is structured
 section: guidance
 status: draft
 css: /assets/stylesheets/phases.css
@@ -41,6 +42,9 @@ $(document).ready(function (){
 </script>
 
 
+<p>Building a great digital service is a complex task, with many risks. To maximise the chances of success it is best to break the work down into discrete phases. Each phase can be though of as an iteration of the idea, increasing the level of detail, complexity and risk throughout. This iterative approach allows the team working on the service to  to start small, fail fast, and deliver value to our users as early as possible.</p>
+
+<h2>Explore the product phases</h2>
 
   <div id="slider-nav" class="slider-nav">
      <a class="nav-item-1 active" rel="1" href="#phase1">1. Discovery</a>
@@ -60,9 +64,10 @@ $(document).ready(function (){
         <h2>Phase 1: Discovery</h2>
 
         <div class="team">
-          <h3>Roles required</h3>
+          <h3>The team</h3>
           <ul>
             <li>Service manager</li>
+            <li>Product manager</li>
             <li>Technical architect</li>
             <li>Business analyst</li>
             <li>Delivery manager</li>
@@ -70,13 +75,30 @@ $(document).ready(function (){
           </ul>
         </div>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra, elit sed hendrerit condimentum, libero elit tincidunt mauris, id rutrum tellus leo at urna. Fusce dui mi, lacinia sit amet blandit vitae, interdum ut eros. Nulla egestas imperdiet rutrum.</p>
+        <p>The objective of this phase is to gain an understanding of what the users of the service need, what the business requirements are and what technological or policy related constraints there might be.</p>
 
-        <p>Praesent vel metus ligula. In ut leo enim, in interdum urna. In hac habitasse platea.</p>
+        <p>This is achieved through research, workshops and interviews. Typical outputs from this phase are a list of user needs, high level wireframes or prototypes and possibly user personas.</p>
 
-        <h3>Typical outputs</h3>
+        <p>A small team will be required and the phase should not take longer than a week. At the end of the phase a decision should be made whether to proceeed to the Alpha phase.</p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra, elit sed hendrerit condimentum, libero elit tincidunt mauris, id rutrum tellus leo at urna. Fusce dui mi, lacinia sit amet blandit vitae, interdum ut eros. Nulla egestas imperdiet rutrum. Praesent vel metus ligula. In ut leo enim, in interdum urna. In hac habitasse platea.</p>
+        <ul class="outputs">
+          <li>
+            <div class="output">
+            </div>
+            User needs
+          </li>
+          <li>
+            <div class="output">
+            </div>
+              Personas
+          </li>
+          <li>
+            <div class="output">
+            </div>
+              Wireframes
+          </li>
+        </ul>
+
       </section>
       <section id="phase2">
         <div class="infographic">
@@ -84,17 +106,37 @@ $(document).ready(function (){
         <h2>Phase 2: Alpha</h2>
 
         <div class="team">
-          <h3>Roles required</h3>
+          <h3>The team</h3>
           <ul>
             <li>Service manager</li>
+            <li>Product manager</li>
             <li>Technical architect</li>
+            <li>Business analyst</li>
+            <li>Delivery manager</li>
+            <li>User researcher</li>
             <li>Software developer</li>
           </ul>
         </div>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra, elit sed hendrerit condimentum, libero elit tincidunt mauris, id rutrum tellus leo at urna. Fusce dui mi, lacinia sit amet blandit vitae, interdum ut eros. Nulla egestas imperdiet rutrum. Praesent vel metus ligula. In ut leo enim, in interdum urna. In hac habitasse platea.</p>
+        <p>The objective of this phase is to build a working prototype that can be used by stakeholders or a closed group of end users. This will enable you to trial technology and get early feedback on the design of the service.</p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra, elit sed hendrerit condimentum, libero elit tincidunt mauris, id rutrum tellus leo at urna. Fusce dui mi, lacinia sit amet blandit vitae, interdum ut eros. Nulla egestas imperdiet rutrum. Praesent vel metus ligula. In ut leo enim, in interdum urna. In hac habitasse platea dictumst. Nullam euismod, eros et venenatis adipiscing, libero libero cursus magna, et semper tellus ipsum eget libero.</p>
+        <p>The team will work iteratively, with an inception followed by development, a showcase and a retrospective.</p>
+
+        <p>You may need to bring more developers and designers into the team, but the whole phase should not last longer than about six to eight weeks. By the end of the phase you should have a clear idea of what's required to build a Beta.</p>
+
+        <ul class="outputs">
+          <li>
+            <div class="output">
+            </div>
+            Prototype
+          </li>
+          <li>
+            <div class="output">
+            </div>
+            Backlog
+          </li>
+        </ul>
+
       </section>
       <section id="phase3">
         <div class="infographic">
@@ -102,17 +144,36 @@ $(document).ready(function (){
         <h2>Phase 3: Beta</h2>
 
         <div class="team">
-          <h3>Roles required</h3>
+          <h3>The team</h3>
           <ul>
             <li>Service manager</li>
+            <li>Product manager</li>
             <li>Technical architect</li>
+            <li>Business analyst</li>
+            <li>Delivery manager</li>
+            <li>User researcher</li>
             <li>Software developer</li>
           </ul>
         </div>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra, elit sed hendrerit condimentum, libero elit tincidunt mauris, id rutrum tellus leo at urna. Fusce dui mi, lacinia sit amet blandit vitae, interdum ut eros. Nulla egestas imperdiet rutrum. Praesent vel metus ligula. In ut leo enim, in interdum urna. In hac habitasse platea.</p>
+        <p>The objective of this phase is to build a fully working prototype and make it available to all end users.</p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra, elit sed hendrerit condimentum, libero elit tincidunt mauris, id rutrum tellus leo at urna. Fusce dui mi, lacinia sit amet blandit vitae, interdum ut eros. Nulla egestas imperdiet rutrum. Praesent vel metus ligula. In ut leo enim, in interdum urna. In hac habitasse platea dictumst. Nullam euismod, eros et venenatis adipiscing, libero libero cursus magna, et semper tellus ipsum eget libero.</p>
+        <p>This is achieved by delivering the user stories in the backlog created in the Alpha phase. This is the time to resolve any outstanding technical or process-related challenges, get the service accredited and plan to go live.</p>
+
+        <p>You will now know what size team you need to deliver the service. The Beta phase should typically take a couple of months at most.</p>
+
+        <ul class="outputs">
+          <li>
+            <div class="output">
+            </div>
+            Prototype
+          </li>
+          <li>
+            <div class="output">
+            </div>
+            Backlog
+          </li>
+        </ul>
       </section>
       <section id="phase4">
         <div class="infographic">
@@ -128,9 +189,20 @@ $(document).ready(function (){
           </ul>
         </div>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra, elit sed hendrerit condimentum, libero elit tincidunt mauris, id rutrum tellus leo at urna. Fusce dui mi, lacinia sit amet blandit vitae, interdum ut eros. Nulla egestas imperdiet rutrum. Praesent vel metus ligula. In ut leo enim, in interdum urna. In hac habitasse platea.</p>
+        <p>The objective of this phase is to provide a fuly resilient service to all end users. The service should now meet all security and performance standards.
+        </p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra, elit sed hendrerit condimentum, libero elit tincidunt mauris, id rutrum tellus leo at urna. Fusce dui mi, lacinia sit amet blandit vitae, interdum ut eros. Nulla egestas imperdiet rutrum. Praesent vel metus ligula. In ut leo enim, in interdum urna. In hac habitasse platea dictumst. Nullam euismod, eros et venenatis adipiscing, libero libero cursus magna, et semper tellus ipsum eget libero.</p>
+        <p>This is not the end of the process though. The service should now be improved continuously, based on user feedback, analytics and further research.</p>
+
+        <p>The team may need to be reconfigured to reflect the operational requirements of the service.</p>
+
+        <ul class="outputs">
+          <li>
+            <div class="output">
+            </div>
+            Live service
+          </li>
+        </ul>
       </section>
     </div>
   </div>
