Updated language of standard

--- a/digital-by-default/index.html
+++ b/digital-by-default/index.html
@@ -10,7 +10,7 @@ status: draft
 <div class="standard-intro">
   <img src="../assets/images/DbD-kitemark.png" alt="Digital by Default standard" />
 
-  <p>All new or redesigned transactional services going live after <br> April 2014 must meet the new Digital by Default service standard.</p>
+  <p>All new or redesigned transactional services going live after <br> April 2014 must meet the Digital by Default service standard.</p>
 </div>
 
 <div class="standard">
@@ -22,32 +22,32 @@ status: draft
   <li><a href="">Built and operated by a multidisciplinary team</a></li>
   <li>Delivered using <a href="http://gsdm.herokuapp.com/guides-and-toolkits/working-in-an-agile-way/whatagilelookslike.html">agile</a> working practices</li>
   <li><a href="">Continuously improved based on user feedback and robust research</a></li>
-  <li><a href="">Has defined alpha and beta phases</a></li>
+  <li><a href="">Published following defined alpha and beta phases</a></li>
 </ul>
 
 <h3>Effective</h3>
 <ul>
-  <li><a href="">Plans for and reaches high user satisfaction</a></li>
-  <li><a href="">Plans for and reaches a low cost per transaction</a></li>
-  <li><a href="">Plans for and reaches high transaction success rates</a></li>
-  <li><a href="">Plans for and reaches high levels of digital take-up</a></li>
+  <li><a href="">Consistently reaching high levels of user satisfaction</a></li>
+  <li><a href="">Achieving a low cost per transaction</a></li>
+  <li><a href="">Ronsitently showing a high transaction success rate</a></li>
+  <li><a href="">Reaching, or following plans to reach, high levels of digital take-up</a></li>
 </ul>
 
 <h3>Open</h3>
 <ul>
-  <li><a href="http://gsdm.herokuapp.com/guides-and-toolkits/legal-processes/openstandardsandlicencing.html">Makes code and content open and reusable by others</a></li>
-  <li><a href="">Uses open standards and APIs where they exist, establishes new ones where they don't</a></li>
-  <li><a href="">Blogs regular public updates throughout the design and life of the service</a></li>
+  <li><a href="http://gsdm.herokuapp.com/guides-and-toolkits/legal-processes/openstandardsandlicencing.html">Made up of code and content that is open and reusable</a></li>
+  <li><a href="">A user of open standards and APIs</a></li>
+  <li><a href="">Regularly written about by the team designing and building it throughout the life of the service</a></li>
 </ul>
 
 <h3>Usable</h3>
 <ul>
-  <li><a href="">Does what the user needs it to do</a></li>
-  <li><a href="">Is used by everyone who can use digital services</a></li>
-  <li><a href="">Is accessible to those who can't use digital services</a></li>
-  <li><a href="">Is device and platform independent</a></li>
-  <li><a href="">Integrates seamlessly with the non-digital world</a></li>
-  <li><a href="">Feels like it's part of GOV.UK</a></li>
+  <li><a href="">Able to meet the needs of its users</a></li>
+  <li><a href="">Usable by everyone able to access digital services</a></li>
+  <li><a href="">Accessible to those who can't use digital services</a></li>
+  <li><a href="">Device and platform independent</a></li>
+  <li><a href="">Seamlessly integrated with assisted digital channels</a></li>
+  <li><a href="">Part of GOV.UK in how it looks and feels</a></li>
 </ul>
 
 </div>
