--- a/digital-by-default/index.html
+++ b/digital-by-default/index.html
@@ -29,7 +29,7 @@ status: draft
 <ul>
   <li><a href="">Consistently reaching high levels of user satisfaction</a></li>
   <li><a href="">Achieving a low cost per transaction</a></li>
-  <li><a href="">Ronsitently showing a high transaction success rate</a></li>
+  <li><a href="">Consitently showing a high transaction success rate</a></li>
   <li><a href="">Reaching, or following plans to reach, high levels of digital take-up</a></li>
 </ul>
 
