links form standard

--- a/digital-by-default/index.html
+++ b/digital-by-default/index.html
@@ -6,7 +6,6 @@ status: draft
 ---
 
 <p class="subtitle">The new standard for government services</p>
-
 <div class="standard-intro">
   <img src="../assets/images/DbD-kitemark.png" alt="Digital by Default standard" />
 
@@ -16,38 +15,38 @@ status: draft
 <div class="standard">
 <h2>A Digital by Default service is:</h2>
 
+<h3>Usable</h3>
+<ul>
+  <li><a href="/guides-and-toolkits/users-of-your-service/understandinguserneeds.html">Able to meet the needs of its users</a></li>
+  <li>Usable by everyone able to access digital services</li>
+  <li><a href="/guides-and-toolkits/assisted-digital/whatisassisteddigital.html">Accessible to those who can't use digital services</a></li>
+  <li>Device and platform independent</li>
+  <li>Seamlessly integrated with assisted digital channels</li>
+  <li><a href="/guides-and-toolkits/designing-your-service/index.html">Part of GOV.UK in how it looks and feels</a></li>
+</ul>
+
 <h3>Agile</h3>
 <ul>
-  <li><a href="">Owned by a single, suitably skilled service manager</a></li>
-  <li><a href="">Built and operated by a multidisciplinary team</a></li>
-  <li>Delivered using <a href="http://gsdm.herokuapp.com/guides-and-toolkits/working-in-an-agile-way/whatagilelookslike.html">agile</a> working practices</li>
-  <li><a href="">Continuously improved based on user feedback and robust research</a></li>
-  <li><a href="">Published following defined alpha and beta phases</a></li>
+  <li><a href="/guides-and-toolkits/building-a-team/servicemanager.html">Owned by a single, suitably skilled service manager</a></li>
+  <li><a href="/guides-and-toolkits/building-a-team/index.html">Built and operated by a multidisciplinary team</a></li>
+  <li>Delivered using <a href="/guides-and-toolkits/working-in-an-agile-way/whatagilelookslike.html">agile</a> working practices</li>
+  <li><a href="/guides-and-toolkits/user-research/introductiontouserresearch.html">Continuously improved based on user feedback and robust research</a></li>
+  <li><a href="/guides-and-toolkits/phases/index.html">Published following defined alpha and beta phases</a></li>
 </ul>
 
 <h3>Effective</h3>
 <ul>
-  <li><a href="">Consistently reaching high levels of user satisfaction</a></li>
-  <li><a href="">Achieving a low cost per transaction</a></li>
-  <li><a href="">Consitently showing a high transaction success rate</a></li>
-  <li><a href="">Reaching, or following plans to reach, high levels of digital take-up</a></li>
+  <li><a href="/guides-and-toolkits/kpis/implementingcustomersatisfactionmeasure.html">Consistently reaching high levels of user satisfaction</a></li>
+  <li><a href="/guides-and-toolkits/kpis/implementingcostpertransactionmeasure.html">Achieving a low cost per transaction</a></li>
+  <li><a href="/guides-and-toolkits/kpis/implementingtransactionsuccessmetric.html">Consitently showing a high transaction success rate</a></li>
+  <li>Reaching, or following plans to reach, high levels of digital take-up</li>
 </ul>
 
 <h3>Open</h3>
 <ul>
-  <li><a href="http://gsdm.herokuapp.com/guides-and-toolkits/legal-processes/openstandardsandlicencing.html">Made up of code and content that is open and reusable</a></li>
-  <li><a href="">A user of open standards and APIs</a></li>
-  <li><a href="">Regularly written about by the team designing and building it throughout the life of the service</a></li>
-</ul>
-
-<h3>Usable</h3>
-<ul>
-  <li><a href="">Able to meet the needs of its users</a></li>
-  <li><a href="">Usable by everyone able to access digital services</a></li>
-  <li><a href="">Accessible to those who can't use digital services</a></li>
-  <li><a href="">Device and platform independent</a></li>
-  <li><a href="">Seamlessly integrated with assisted digital channels</a></li>
-  <li><a href="">Part of GOV.UK in how it looks and feels</a></li>
+  <li>Made up of code and content that is open and reusable</li>
+  <li>A user of open standards and APIs</li>
+  <li>Progress is open and visible across government and the public</li>
 </ul>
 
 </div>
