--- a/digital-by-default/index.html
+++ b/digital-by-default/index.html
@@ -39,7 +39,7 @@ status: draft
   <li><a href="/guides-and-toolkits/kpis/implementingcustomersatisfactionmeasure.html">Consistently reaching high levels of user satisfaction</a></li>
   <li><a href="/guides-and-toolkits/kpis/implementingcostpertransactionmeasure.html">Achieving a low cost per transaction</a></li>
   <li><a href="/guides-and-toolkits/kpis/implementingtransactionsuccessmetric.html">Consitently showing a high transaction success rate</a></li>
-  <li>Reaching, or following plans to reach, high levels of digital take-up</li>
+  <li><a href="/guides-and-toolkits/communications/channelshiftstrategies.md">Reaching, or following plans to reach, high levels of digital take-up</a></li>
 </ul>
 
 <h3>Open</h3>
