--- a/digital-by-default/index.html
+++ b/digital-by-default/index.html
@@ -1,6 +1,6 @@
 ---
 layout: gsdm
-title: The Digital by Default <br/>Standard
+title: The Digital by Default Standard
 section: dbd
 status: draft
 ---
