Add links to Standard page

--- a/digital-by-default/index.html
+++ b/digital-by-default/index.html
@@ -20,7 +20,7 @@ status: draft
   <li><a href="/guides-and-toolkits/users-of-your-service/understandinguserneeds.html">Able to meet the needs of its users</a></li>
   <li>Usable by everyone able to access digital services</li>
   <li><a href="/guides-and-toolkits/assisted-digital/whatisassisteddigital.html">Accessible to those who can't use digital services</a></li>
-  <li>Device and platform independent</li>
+  <li><a href="/guides-and-toolkits/designing-your-service/browsercompatibility.html">Device and platform independent</a></li>
   <li>Seamlessly integrated with assisted digital channels</li>
   <li><a href="/guides-and-toolkits/designing-your-service/index.html">Part of GOV.UK in how it looks and feels</a></li>
 </ul>
@@ -29,7 +29,7 @@ status: draft
 <ul>
   <li><a href="/guides-and-toolkits/building-a-team/servicemanager.html">Owned by a single, suitably skilled service manager</a></li>
   <li><a href="/guides-and-toolkits/building-a-team/index.html">Built and operated by a multidisciplinary team</a></li>
-  <li>Delivered using <a href="/guides-and-toolkits/working-in-an-agile-way/whatagilelookslike.html">agile</a> working practices</li>
+  <li><a href="/guides-and-toolkits/working-in-an-agile-way/">Delivered using agile working practices</a></li>
   <li><a href="/guides-and-toolkits/user-research/introductiontouserresearch.html">Continuously improved based on user feedback and robust research</a></li>
   <li><a href="/guides-and-toolkits/phases/index.html">Published following defined alpha and beta phases</a></li>
 </ul>
@@ -45,7 +45,7 @@ status: draft
 <h3>Open</h3>
 <ul>
   <li>Made up of code and content that is open and reusable</li>
-  <li>A user of open standards and APIs</li>
+  <li><a href="/guides-and-toolkits/apis/">A user of open standards and APIs</a></li>
   <li>Progress is open and visible across government and the public</li>
 </ul>
 
