--- a/digital-by-default/index.html
+++ b/digital-by-default/index.html
@@ -1,7 +1,7 @@
 ---
 layout: gsdm
 title: The Digital by Default Standard
-subtitle: The new standard for government services
+subtitle: Services so good that people prefer to use them
 audience: design, development
 section: dbd
 status: draft
@@ -19,12 +19,12 @@ status: draft
 <h3>Usable</h3>
 <ul>
   <li><a href="/guides-and-toolkits/users-of-your-service/understandinguserneeds.html">Able to meet the needs of its users</a></li>
-  <li>Digital services so good that people prefer to use them</li>
-  <li><a href="/guides-and-toolkits/assisted-digital/whatisassisteddigital.html">Accessible to those who can't use digital services</a></li>
+  <li>Designed for inclusion</li>
+  <li><a href="/guides-and-toolkits/assisted-digital/whatisassisteddigital.html">Supported by a plan for assisting digital use</a></li>
   <li><a href="/guides-and-toolkits/designing-your-service/browsercompatibility.html">Device and platform independent</a></li>
   <li>Seamlessly integrated with any non-digital steps</li>
-  <li><a href="/guides-and-toolkits/designing-your-service/index.html">Part of GOV.UK in how it looks and feels</a></li>
-  <li>Has understood and challanged any existing policy or operational constraints</li>  
+  <li><a href="/guides-and-toolkits/designing-your-service/index.html">Part of GOV.UK in look, tone and feel</a></li>
+  <li>Easy to use</li>  
 </ul>
 
 <h3>Agile</h3>
@@ -32,28 +32,29 @@ status: draft
   <li><a href="/guides-and-toolkits/building-a-team/servicemanager.html">Owned by a single, skilled and empowered service manager</a></li>
   <li><a href="/guides-and-toolkits/building-a-team/index.html">Built and operated by a multidisciplinary team</a></li>
   <li><a href="/guides-and-toolkits/working-in-an-agile-way/">Delivered using an Agile methodology</a></li>
-  <li><a href="/guides-and-toolkits/user-research/introductiontouserresearch.html">Continuously improves based on user feedback and research</a></li>
-  <li>Can conduct multivariant experements on the live service</li>  
-  <li><a href="/guides-and-toolkits/phases/index.html">Is tried out with real users at the alpha and public beta phases</a></li>
-  <li>Can be updated and improved on a weekly basis.</li>    
-  <li>Has a full end-to-end test environment.</li>
+  <li><a href="/guides-and-toolkits/user-research/introductiontouserresearch.html">Continuously improved based on user research and performance data</a></li>
+  <li>Able to support multivariant experiments</li>  
+  <li><a href="/guides-and-toolkits/phases/index.html">Tested with real users at the alpha and public beta phases</a></li>
+  <li>Able to be updated and improved on a daily basis</li>    
+  <li>Tested in an environment identical to the live service</li>
 </ul>
 
 <h3>Effective</h3>
 <ul>
-  <li><a href="/guides-and-toolkits/designing-your-service/designprinciples.html">Follows the GDS service design principles</a></li>
-  <li><a href="/guides-and-toolkits/kpis/implementingcustomersatisfactionmeasure.html">Aims for and achieving high levels of user satisfaction</a></li>
-  <li><a href="/guides-and-toolkits/kpis/implementingcostpertransactionmeasure.html">Achieves a low cost per transaction</a></li>
-  <li><a href="/guides-and-toolkits/kpis/implementingtransactionsuccessmetric.html">Shows a high and consistent transaction success rate</a></li>
-  <li><a href="/guides-and-toolkits/communications/channelshiftstrategies.md">Promotes and reaches higher levels of digital take-up</a></li>
-  <li>Has been used, end-to-end, successfully by the relevant minister</li>
+  <li><a href="/guides-and-toolkits/kpis/implementingcustomersatisfactionmeasure.html">Achieving high levels of user satisfaction</a></li>
+  <li><a href="/guides-and-toolkits/kpis/implementingcostpertransactionmeasure.html">Achieving a low cost per transaction</a></li>
+  <li><a href="/guides-and-toolkits/kpis/implementingtransactionsuccessmetric.html">Showing a consistently high transaction success rate</a></li>
+  <li><a href="/guides-and-toolkits/communications/channelshiftstrategies.md">Reaching high levels of digital take-up</a></li>
+  <li>Successfully tested by the minister responsible</li>
 </ul>
 
 <h3>Open</h3>
 <ul>
-  <li>Has code and content that is open and reusable</li>
-  <li><a href="/guides-and-toolkits/apis/">Uses open standards where they exist</a></li>
-  <li>Makes progress open and visible across government and the public</li>
+  <li>Publishing new, reusable code under an appropriate license</li>
+  <li><a href="/guides-and-toolkits/apis/">Using open standards and common platforms where they exist</a></li>
+  <li>Sharing progress and knowledge with stakeholders, colleagues and the public</li>
+  <li>Safe and secure</li>
+  <li>Built to an appropriate security level</li>
 </ul>
 
 </div>
