--- a/digital-by-default/index.html
+++ b/digital-by-default/index.html
@@ -21,7 +21,7 @@ status: draft
 <ul>
   <li><a href="/users/understandinguserneeds.html">Able to meet the needs of its users</a></li>
   <li>Designed for inclusion</li>
-  <li><a href="/guides/assisted-digital/whatisassisteddigital.html">Supported by a plan for assisting digital use</a></li>
+  <li><a href="/assisted-digital/index.html">Supported by a plan for assisting digital use</a></li>
   <li><a href="/guides/designing-your-service/browsercompatibility.html">Device and platform independent</a></li>
   <li>Seamlessly integrated with any non-digital steps</li>
   <li><a href="/guides/designing-your-service/index.html">Part of GOV.UK in look, tone and feel</a></li>
