--- a/digital-by-default/index.html
+++ b/digital-by-default/index.html
@@ -32,7 +32,7 @@ status: draft
 <ul>
   <li><a href="/the-team/servicemanager.html">Owned by a single, skilled and empowered service manager</a></li>
   <li><a href="/guides/building-a-team/index.html">Built and operated by a multidisciplinary team</a></li>
-  <li><a href="/guides/working-in-an-agile-way/">Delivered using an Agile methodology</a></li>
+  <li><a href="/agile/index.html">Delivered using an Agile methodology</a></li>
   <li><a href="/guides/user-research/introductiontouserresearch.html">Continuously improved based on user research and performance data</a></li>
   <li>Able to support multivariant experiments</li>  
   <li><a href="/guides/phases/index.html">Tested with real users at the alpha and public beta phases</a></li>
