--- a/digital-by-default/index.html
+++ b/digital-by-default/index.html
@@ -35,7 +35,7 @@ status: draft
   <li><a href="/agile/index.html">Delivered using an Agile methodology</a></li>
   <li><a href="/users/introductiontouserresearch.html">Continuously improved based on user research and performance data</a></li>
   <li>Able to support multivariant experiments</li>  
-  <li><a href="/guides/phases/index.html">Tested with real users at the alpha and public beta phases</a></li>
+  <li><a href="/phases/index.html">Tested with real users at the alpha and public beta phases</a></li>
   <li>Able to be updated and improved on a daily basis</li>    
   <li>Tested in an environment identical to the live service</li>
 </ul>
