--- a/digital-by-default/index.html
+++ b/digital-by-default/index.html
@@ -45,7 +45,7 @@ status: draft
   <li><a href="/kpis/implementingcustomersatisfactionmeasure.html">Achieving high levels of user satisfaction</a></li>
   <li><a href="/kpis/implementingcostpertransactionmeasure.html">Achieving a low cost per transaction</a></li>
   <li><a href="/kpis/implementingtransactionsuccessmetric.html">Showing a consistently high transaction success rate</a></li>
-  <li><a href="/guides/communications/channelshiftstrategies.md">Reaching high levels of digital take-up</a></li>
+  <li><a href="/kpis/digital-takeup.html">Reaching high levels of digital take-up</a></li>
   <li>Successfully tested by the minister responsible</li>
 </ul>
 
