--- a/digital-by-default/index.html
+++ b/digital-by-default/index.html
@@ -52,7 +52,7 @@ status: draft
 <h3>Open</h3>
 <ul>
   <li>Publishing new, reusable code under an appropriate license</li>
-  <li><a href="/guides/apis/">Using open standards and common platforms where they exist</a></li>
+  <li><a href="/apis/index.html">Using open standards and common platforms where they exist</a></li>
   <li>Sharing progress and knowledge with stakeholders, colleagues and the public</li>
   <li>Safe and secure</li>
   <li>Built to an appropriate security level</li>
