--- a/digital-by-default/index.html
+++ b/digital-by-default/index.html
@@ -2,7 +2,10 @@
 layout: gsdm
 title: The Digital by Default Standard
 subtitle: Services so good that people prefer to use them
-audience: design, development
+type: guide
+audience:
+  primary: service-manager
+  secondary: designer, developer, tech-arch, analyst, researcher
 theme: getting-started
 section: dbd
 status: draft
