Update DbD standard page

--- a/digital-by-default/index.html
+++ b/digital-by-default/index.html
@@ -11,14 +11,8 @@ section: dbd
 status: draft
 ---
 
-<div class="standard-intro">
-  <img src="../assets/images/DbD-kitemark.png" alt="Digital by Default service standard" />
-
-  <p>All new or redesigned transactional services going live after <br> April 2014 must meet the Digital by Default service standard.</p>
-</div>
-
 <div class="standard">
-<h2>Each Digital by Default service is:</h2>
+<h4>A Digital by Default service is:</h4>
 
 <h3>Usable</h3>
 <ul>
