--- a/_plugins/developers/index.html
+++ b/_plugins/developers/index.html
@@ -112,7 +112,7 @@
     <h3>Our design principles</h3>
     <p><a href="http://localhost:4050/designers/guides/design-principles">Everything we make is founded on these ten principles</a></p>
   </div>
-  <div class="topic">
+  <div class="link-list">
     <h3>Guides for designers</h3>
     <ul>
       <li><a href="">The role of the designer</a></li>
@@ -123,7 +123,7 @@
       <li><a href="">Assisted digital</a></li>
     </ul>
   </div>
-  <div class="topic">
+  <div class="link-list">
     <h3>Resources and assets</h3>
     <ul>
       <li><a href="">Templates and code</a></li>
@@ -137,7 +137,7 @@
 
 <h2>
 
-<div class="topic">
+<div class="link-list">
   <h3>More guides</h3>
   <ul>
       <li><a href="http://localhost:4050/digital-by-default"><span class="title">The Digital by Default standard</span><span class="description">  All new government services must meet this standard by 2014</span></a></li>
