--- a/service-manual/index.html
+++ b/service-manual/index.html
@@ -18,11 +18,14 @@ category: home
 </header>
 
 <div class="intro">
-  <h2>Start thinking differently about digital delivery</h2>
+  <h2><a href="/service-manual/start">Start thinking differently about digital delivery</a></h2>
 
   <p>Find out what it means to be part of a user-focused, agile and multidisciplinary team delivering digital services in government, and how to build to the Digital by Default Service Standard.</p>
 
-  <p class="get-started"><a href="/service-manual/start" class="big button">Start now</a></p>
+  <p><a href="/service-manual/start">Get started</a></p>
+
+  <a href="/service-manual/start"><img src="/service-manual/assets/images/digital-service-diagram.png" alt="Digit service delivery diagram"></a>
+
 </div>
 
 <div class="service-life">
@@ -36,117 +39,42 @@ category: home
 
       <p>A short phase, in which you start researching the needs of your service’s users, find out what you should be measuring, and explore technological or policy-related constraints.</p>
 
-      <ul class="outputs">
-        <li>
-          <img class="output" src="/service-manual/assets/images/pictograms/backlog.png" />
-          List of user needs
-        </li>
-        <li>
-          <img class="output" src="/service-manual/assets/images/pictograms/user-needs.png" />
-          User personas
-        </li>
-        <li>
-          <img class="output" src="/service-manual/assets/images/pictograms/prototype.png" />
-          Rough wireframes
-        </li>
-        <li>
-          <img class="output" src="/service-manual/assets/images/pictograms/discussion.png" />
-          Stakeholder interviews
-        </li>
-
-        <li>
-          <img class="output" src="/service-manual/assets/images/pictograms/discovery-small.png" />
-          Team size
-        </li>
-      </ul>
+      <p><a href="/service-manual/phases/discovery.html">Learn about the discovery phase</a></p>
+      
+      <img src="/service-manual/assets/images/phases-icon-discovery.png" alt="Discovery phase">
     </li>
     <li class="alpha">
       <h2><a href="/service-manual/phases/alpha.html">Alpha</a></h2>
 
       <p>A short phase in which you prototype solutions for your users needs. You’ll be testing with a small group of users or stakeholders, and getting early feedback about the design of the service.</p>
 
-      <ul class="outputs">
-        <li>
-          <img class="output" src="/service-manual/assets/images/pictograms/backlog.png" />
-          User story backlog
-        </li>
-        <li>
-          <img class="output" src="/service-manual/assets/images/pictograms/design-and-build.png" />
-          Design and build
-        </li>
-        <li>
-          <img class="output" src="/service-manual/assets/images/pictograms/prototype.png" />
-          Working prototype
-        </li>
-        <li>
-          <img class="output" src="/service-manual/assets/images/pictograms/presentation.png" />
-          Show and tell
-        </li>
-        <li>
-          <img class="output" src="/service-manual/assets/images/pictograms/discussion.png" />
-          Retrospective
-        </li>
-        <li>
-          <img class="output" src="/service-manual/assets/images/pictograms/alpha-medium.png" />
-          Team size
-        </li>
-      </ul>
+      <p><a href="/service-manual/phases/alpha.html">Learn about the alpha phase</a></p>
+
+      <img src="/service-manual/assets/images/phases-icon-alpha.png" alt="Alpha phase">
     </li>
     <li class="beta">
       <h2><a href="/service-manual/phases/beta.html">Beta</a></h2>
 
       <p>You’re developing against the demands of a live environment, understanding how to build and scale while meeting user needs. You’ll also be releasing a version to test in public.</p>
 
-      <ul class="outputs">
-        <li>
-          <img class="output" src="/service-manual/assets/images/pictograms/backlog.png" />
-          User story backlog
-        </li>
-        <li>
-          <img class="output" src="/service-manual/assets/images/pictograms/design-and-build.png" />
-          Design and build
-        </li>
-        <li>
-          <img class="output" src="/service-manual/assets/images/pictograms/prototype.png" />
-          Working service
-        </li>
-        <li>
-          <img class="output" src="/service-manual/assets/images/pictograms/presentation.png" />
-          Show and tell
-        </li>
-        <li>
-          <img class="output" src="/service-manual/assets/images/pictograms/discussion.png" />
-          Retrospective
-        </li>
-        <li>
-          <img class="output" src="/service-manual/assets/images/pictograms/beta-large.png" />
-          Team size
-        </li>
-      </ul>
+      <p><a href="/service-manual/phases/beta.html">Learn about the beta phase</a></p>
+
+      <img src="/service-manual/assets/images/phases-icon-beta.png" alt="Beta phase">
     </li>
     <li class="live">
       <h2><a href="/service-manual/phases/live.html">Live</a></h2>
 
-      <p>The work doesn’t stop once your service is live. You’ll be iteratively improving your service, reacting to new needs and demands, and meeting targets set during its development.</p>      
+      <p>The work doesn’t stop once your service is live. You’ll be iteratively improving your service, reacting to new needs and demands, and meeting targets set during its development.</p>
 
-      <ul class="outputs">
-        <li>
-          <img class="output" src="/service-manual/assets/images/pictograms/website.png" />
-          Live service
-        </li>
-        <li>
-          <img class="output" src="/service-manual/assets/images/pictograms/discussion.png" />
-          User feedback
-        </li>
-        <li>
-          <img class="output" src="/service-manual/assets/images/pictograms/live-larger.png" />
-          Team size
-        </li>
-      </ul>
+      <p><a href="/service-manual/phases/live.html">Learn about the live phase</a></p>
+
+      <img src="/service-manual/assets/images/phases-icon-live.png" alt="Live phase">
     </li>
   </ul>
 </div>
 
-{% include _role-links.html %}
+<div class="resources">
+  {% include _role-links.html %}
 
-<p><a href="/all-guides"><strong>See all guides...</strong></a>
+  <p><a href="/all-guides"><strong>See all guides...</strong></a></p>
+</div>
