Fix broken links

--- a/service-manual/index.html
+++ b/service-manual/index.html
@@ -4,7 +4,7 @@ category: home
 ---
 
 <div class="dbd-promo">
-  <a class="logo" href="/service-standard/digital-by-default"><img src="/service-manual/assets/images/DbD-kitemark.png" alt="Read the Digital by Default standard" /></a>
+  <a class="logo" href="/service-manual/digital-by-default"><img src="/service-manual/assets/images/DbD-kitemark.png" alt="Read the Digital by Default standard" /></a>
   <p>
     From April 2014, all new and redesigned digital services will need to be so good that people prefer to use them. Find out more about the <a href="/service-manual/digital-by-default">Digital by Default Service Standard</a>.
   </p>
@@ -76,5 +76,5 @@ category: home
 <div class="resources">
   {% include _role-links.html %}
 
-  <p><a href="/all-guides"><strong>See all guides...</strong></a></p>
+  <p><a href="/browse"><strong>Browse all guides…</strong></a></p>
 </div>
