Fix browse link

--- a/service-manual/index.html
+++ b/service-manual/index.html
@@ -76,5 +76,5 @@ category: home
 <div class="resources">
   {% include _role-links.html %}
 
-  <p><a href="/browse"><strong>Browse all guides…</strong></a></p>
+  <p><a href="/service-manual/browse"><strong>Browse all guides…</strong></a></p>
 </div>
