--- a/service-manual/index.html
+++ b/service-manual/index.html
@@ -6,7 +6,7 @@ category: home
 <div class="dbd-promo">
   <a class="logo" href="/service-standard/digital-by-default"><img src="/service-manual/assets/images/DbD-kitemark.png" alt="Read the Digital by Default standard" /></a>
   <p>
-    From April 2014, all new and redesigned digital services will need to be so good that people prefer to use them. Find out more about the <a href="/service-manual/digital-by-default">Digital by Default Service Standard</a>.
+    From April 2014, all new and redesigned digital services will need to be so good that people prefer to use them. <a href="/service-manual/digital-by-default">Find out more &raquo;</a>
   </p>
 </div>
 
