Trying a two-column layout

--- a/service-manual/index.html
+++ b/service-manual/index.html
@@ -19,13 +19,17 @@ category: home
 
 
 <div class="intro">
-  <h2><a href="/service-manual/start">Start thinking differently about digital delivery</a></h2>
+  <h2>Think differently about digital delivery</h2>
 
-  <p>Find out what it means to be part of a user-focused, agile and multidisciplinary team delivering digital services in government, and how to build to the Digital by Default Service Standard.</p>
+  <p>Discover what it means to be part of an agile, user-focused and multidisciplinary team, delivering digital services in government.</p>
+  <p><a href="/service-manual/start">Get started &raquo;</a></p>
 
-  <p><a href="/service-manual/start">Get started</a></p>
 
-  <a href="/service-manual/start"><img src="/service-manual/assets/images/digital-service-diagram.png" alt="Digit service delivery diagram"></a>
+  <div id="roles">
+  {% include _role-links.html %}
+
+  <p><a href="/all-guides"><strong>See all guides...</strong></a></p>
+  </div>
 
 </div>
 
@@ -74,8 +78,4 @@ category: home
   </ul>
 </div>
 
-<div class="resources">
-  {% include _role-links.html %}
 
-  <p><a href="/all-guides"><strong>See all guides...</strong></a></p>
-</div>
