Tweak service phase width and intro

--- a/service-manual/index.html
+++ b/service-manual/index.html
@@ -36,7 +36,7 @@ category: home
 <div class="service-life">
   <h2>Making a service</h2>
 
-  <p>If you’ve already built a digital by default service, or want to get straight to guidance relevant to what you’re building, then you can explore by phase or role below.</p>
+  <p>If you want to get straight to guidance relevant to what you’re building now, then you can explore by service phase below.</p>
 
   <ul class="phases">
     <li class="discovery">
