Tighten up homepage layout

--- a/service-manual/index.html
+++ b/service-manual/index.html
@@ -36,7 +36,7 @@ category: home
 <div class="service-life">
   <h2>Making a service</h2>
 
-  <p>If you want to get straight to guidance relevant to what you’re building now, then you can explore by service phase below.</p>
+  <p>Learn about the different phases of service development and get guidance for the phase you're in now.</p>
 
   <ul class="phases">
     <li class="discovery">
