--- a/service-manual/index.html
+++ b/service-manual/index.html
@@ -12,7 +12,7 @@ category: home
 <div class="dbd-promo">
   <a class="logo" href="/service-standard/digital-by-default"><img src="/service-manual/assets/images/DbD-kitemark.png" alt="Read the Digital by Default standard" /></a>
   <p>
-    From April 2014, all new and redesigned digital services will need to be so good that people prefer to use them. <a href="/service-manual/digital-by-default">Find out more &raquo;</a>
+    From April 2014, all new and redesigned digital government services will need to be so good that people prefer to use them. <a href="/service-manual/digital-by-default">Find out more &raquo;</a>
   </p>
 </div>
 
@@ -22,7 +22,7 @@ category: home
   <h2>Think differently about digital delivery</h2>
 
   <p>Discover what it means to be part of an agile, user-focused and multidisciplinary team, delivering digital services in government.</p>
-  <p><a href="/service-manual/start">Get started &raquo;</a></p>
+  <p><a class="button" href="/service-manual/start">Get started &raquo;</a></p>
 
 
   <div id="roles">
