Role links should come after phases on homepage
The phases content is more important than the role links

--- a/service-manual/index.html
+++ b/service-manual/index.html
@@ -28,17 +28,11 @@ category: home
 
       <p class="start-cta"><a href="/service-manual/start">Start building digital by default services</a></p>
 
-      <div id="roles">
-        {% include _role-links.html %}
-
-        <p><a href="/browse"><strong>Browse all guides…</strong></a></p>
-      </div>
-
     </div>
   </div>
 </div>
 
-<div class="homepage-column">
+<div class="timeline">
   <div class="inner">
     <div class="service-life">
       <h2>Making a service</h2>
@@ -85,4 +79,14 @@ category: home
       </ul>
     </div>
   </div>
+</div>
+
+<div class="homepage-column">
+  <div class="inner">
+   <div id="roles">
+    {% include _role-links.html %}
+
+    <p><a href="/browse"><strong>Browse all guides…</strong></a></p>
+  </div>
+</div>
 </div>
