--- a/service-manual/index.html
+++ b/service-manual/index.html
@@ -86,7 +86,7 @@ category: home
    <div id="roles">
     {% include _role-links.html %}
 
-    <p><a href="/browse"><strong>Browse all guides…</strong></a></p>
+    <p><a href="/service-manual/browse"><strong>Browse all guides…</strong></a></p>
   </div>
 </div>
 </div>
