Linkify phases headings

--- a/service-manual/index.html
+++ b/service-manual/index.html
@@ -35,7 +35,7 @@ category: home
 <div class="timeline">
   <div class="inner">
     <div class="service-life">
-      <h2>Making a service</h2>
+      <h2><a href="/service-manual/phases">Making a service</a></h2>
 
       <p>Learn about the different phases of service design and get guidance for the phase you're in now.</p>
 
