Redesign homepage layout
Major on the standard, followed by search and then browse.
Hero item explains purpose of site.
Browse by topic now promoted above other views.

--- a/service-manual/index.html
+++ b/service-manual/index.html
@@ -1,38 +1,58 @@
 ---
 layout: homepage
 category: home
+js: '/service-manual/assets/javascript/search.js'
 ---
 
-<header class="page-header group">
+<header class="page-header group visuallyhidden">
   <hgroup>
     <h1>Government Service Design Manual</h1>
-    <h2 class="subtitle">Build services so good that people prefer to use them</h2>
   </hgroup>
 </header>
 
-<div class="dbd-promo">
-  <h1 class="logo"><a href="/service-manual/digital-by-default"><img src="/service-manual/assets/images/DbD-kitemark.png" alt="Read the Digital by Default Service Standard" /></a></h1>
-  <p>
-    From April 2014, all new and redesigned digital government services will need to be so good that people prefer to use them.<br />
 
-    <a href="/service-manual/digital-by-default">Find out more &raquo;</a>
-  </p>
+<div class="intro">
+  <p>From April 2014, digital services from the government must meet the new Digital by Default Service Standard.</p>
+  <p>This manual tells you how to do that.</p>
+  <p><strong><a href="">Read the standard</a></strong></p>
 </div>
 
 
+<div class="search-the-manual">
+<form class="form">
+  <label for="site-search-text">Search the manual</label>
+  <input type="search" name="q" id="site-search-text" title="Search" class="js-search-focus" ><input class="submit" type="submit" value="Search">
+</form>
 
-<div class="homepage-column">
-  <div class="inner">
-    <div class="intro">
-      <h2>Think differently about digital delivery</h2>
+<p>Or <a href="/service-manual/browse/">browse all guides by topic</a>.</p>
+</div>
 
-      <p>Discover what it means to be part of an agile, user-focused and multidisciplinary team, delivering digital services in government.</p>
 
-      <p class="start-cta"><a href="/service-manual/start">Start building digital by default services</a></p>
-
-    </div>
+<div class="browse-highlights">
+  <div>
+    <h2>Some background</h2>
+    <p>We need to think differently about digital delivery. Find out why, and how this manual will help.</p>
+    <p><a href="/service-manual/start">Find out more &raquo;</a></p>
+  </div>
+  <div>
+    <h2>Get started</h2>
+    <p>Learn about the different phases <br>of digital service design and get guidance for each phase.</p>
+    <p><a href="/service-manual/phases/">Find out more &raquo;</a></p>
+  </div>
+  <div>
+    <h2>Guides and resources for...</h2>
+    <ul>
+      <li><a href="/service-manual/service-managers">Service managers</a></li>
+      <li><a href="/service-manual/designers">Designers</a></li>
+      <li><a href="/service-manual/developers">Developers</a></li>
+      <li><a href="/service-manual/user-researchers">User researchers</a></li>
+      <li><a href="/service-manual/web-ops">Web operations</a></li>
+      <li><a href="/service-manual/performance-analysts">Performance analysts</a></li>
+    </ul>
   </div>
 </div>
+
+<!--
 
 <div class="timeline">
   <div class="inner">
@@ -49,10 +69,11 @@ category: home
 
 <div class="homepage-column">
   <div class="inner">
-   <div id="roles">
+    <div id="roles">
     {% include _role-links.html %}
 
     <p><a href="/service-manual/browse"><strong>Browse all guides…</strong></a></p>
+    </div>
   </div>
 </div>
-</div>
+-->
