Highlight the search box
Helps to emphasise the text field and breaks up the page

--- a/service-manual/index.html
+++ b/service-manual/index.html
@@ -31,12 +31,12 @@ js: '/service-manual/assets/javascript/search.js'
 <div class="browse-highlights">
   <div>
     <h2>Some background</h2>
-    <p>We need to think differently about digital delivery. Find out why, and how this manual will help.</p>
+    <p>Find out why we need to think differently about digital delivery<br> and how this manual will help.</p>
     <p><a href="/service-manual/start">Find out more &raquo;</a></p>
   </div>
   <div>
     <h2>Get started</h2>
-    <p>Learn about the different phases <br>of digital service design and get guidance for each phase.</p>
+    <p>Learn about the different phases <br>of digital service design and get guidance relating to each phase.</p>
     <p><a href="/service-manual/phases/">Find out more &raquo;</a></p>
   </div>
   <div>
