--- a/service-manual/index.html
+++ b/service-manual/index.html
@@ -14,13 +14,13 @@ js: '/service-manual/assets/javascript/search.js'
 <div class="intro">
   <p>From April 2014, digital services from the government must meet the new Digital by Default Service Standard.</p>
   <p>This manual tells you how to do that.</p>
-  <p><strong><a href="">Read the standard</a></strong></p>
+  <p><strong><a href="/service-manual/digital-by-default/">Read the standard</a></strong></p>
 </div>
 
 
 <div class="search-the-manual">
 <form class="form">
-  <label for="site-search-text">Search the manual</label>
+  <label for="site-search-text">Search the manual...</label>
   <input type="search" name="q" id="site-search-text" title="Search" class="js-search-focus" ><input class="submit" type="submit" value="Search">
 </form>
 
