--- a/service-manual/index.html
+++ b/service-manual/index.html
@@ -31,7 +31,7 @@ js: '/service-manual/assets/javascript/search.js'
 <div class="browse-highlights">
   <div>
     <h2>Some background</h2>
-    <p>Find out why we need to think differently about digital delivery<br> and how this manual will help.</p>
+    <p>Find out why we need to think differently about digital delivery,<br> and how this manual will help.</p>
     <p><a href="/service-manual/start">Find out more &raquo;</a></p>
   </div>
   <div>
