Update DbD promo copy
Make it clearer that the standard is mandatory and should be read

--- a/service-manual/index.html
+++ b/service-manual/index.html
@@ -6,9 +6,10 @@ category: home
 <div class="dbd-promo">
   <h1 class="logo"><a href="/service-manual/digital-by-default"><img src="/service-manual/assets/images/DbD-kitemark.png" alt="Read the Digital by Default Service Standard" /></a></h1>
   <p>
-    From April 2014, all new and redesigned digital government services will need to be so good that people prefer to use them.<br />
+    From April 2014, digital services from the government must meet the new Digital by Default Service Standard.
+    <br>
 
-    <a href="/service-manual/digital-by-default">Find out more &raquo;</a>
+    <strong><a href="/service-manual/digital-by-default">Read the standard &raquo;</a></strong>
   </p>
 </div>
 
