--- a/service-manual/index.html
+++ b/service-manual/index.html
@@ -13,18 +13,28 @@ js: '/service-manual/assets/javascript/search.js'
 
 <div class="intro">
   <p>From April 2014, digital services from the government must meet the new Digital by Default Service Standard.</p>
-  <p>This manual tells you how to do that.</p>
+
   <p><strong><a href="/service-manual/digital-by-default/">Read the standard</a></strong></p>
 </div>
 
-
+<!--
 <div class="search-the-manual">
 <form class="form">
   <label for="site-search-text">Search the manual...</label>
   <input type="search" name="q" id="site-search-text" title="Search" class="js-search-focus" ><input class="submit" type="submit" value="Search">
 </form>
-
 <p>Or <a href="/service-manual/browse/">browse all guides by topic</a>.</p>
+</div>
+-->
+
+<div class="browse-the-manual">
+
+<h2>Government Service Design Manual</h2>
+
+<p>The guides in this manual explain what you need to do to meet the standard.</p>
+
+<p><strong><a href="/service-manual/browse/">Explore the manual</a></strong></p>
+
 </div>
 
 
