Add second design option

--- a/service-manual/index-2.html
+++ b/service-manual/index-2.html
@@ -1,11 +1,11 @@
 ---
 layout: homepage
 category: home
-section_class: homepage
+section_class: homepage-2
 js: '/service-manual/assets/javascript/search.js'
 ---
 
-<header class="page-header group visuallyhidden">
+<header class="page-header group">
   <hgroup>
     <h1>Government Service Design Manual</h1>
   </hgroup>
@@ -49,29 +49,3 @@ js: '/service-manual/assets/javascript/search.js'
     </ul>
   </div>
 </div>
-
-<!--
-
-<div class="timeline">
-  <div class="inner">
-    <div class="service-life">
-      <h2><a href="/service-manual/phases">Making a service</a></h2>
-
-      <p>Learn about the different phases of service design and get guidance for the phase you're in now.</p>
-
-      {% include _phases.html %}
-
-    </div>
-  </div>
-</div>
-
-<div class="homepage-column">
-  <div class="inner">
-    <div id="roles">
-    {% include _role-links.html %}
-
-    <p><a href="/service-manual/browse"><strong>Browse all guides…</strong></a></p>
-    </div>
-  </div>
-</div>
--->
