Update alt homepage design

--- a/service-manual/index-2.html
+++ b/service-manual/index-2.html
@@ -11,12 +11,16 @@ js: '/service-manual/assets/javascript/search.js'
   </hgroup>
 </header>
 
-
+<div class="top">
 <div class="intro">
-  <p>From April 2014, digital services from the government must meet the new Digital by Default Service Standard</p>
-  <p><strong><a href="/service-manual/digital-by-default/">Read the standard &raquo;</a></strong>.</p>
+  <p>The guides and resources in this manual are designed to help teams building government services meet the new Digital by Default Service Standard.</p>
 </div>
 
+<div class="the-standard">
+  <p>From April 2014, digital services from the government must meet the new Digital by Default Service Standard.</p>
+  <p><strong><a href="/service-manual/digital-by-default/">Read the standard &raquo;</a></strong></p>
+</div>
+</div>
 
 <div class="search-the-manual">
 <form class="form">
@@ -33,7 +37,7 @@ js: '/service-manual/assets/javascript/search.js'
     <p><a href="/service-manual/start">Find out more &raquo;</a></p>
   </div>
   <div>
-    <h2>Build a service</h2>
+    <h2>Get started</h2>
     <p>Learn about the different phases <br>of digital service design and get guidance relating to each phase.</p>
     <p><a href="/service-manual/phases/">Find out more &raquo;</a></p>
   </div>
