--- a/service-manual/index-2.html
+++ b/service-manual/index-2.html
@@ -13,7 +13,7 @@ js: '/service-manual/assets/javascript/search.js'
 
 <div class="top">
 <div class="intro">
-  <p>The guides and resources in this manual are designed to help teams building government services meet the new Digital by Default Service Standard.</p>
+  <p>This manual contains everything you need <br>to build digital services for the government.</p>
 </div>
 
 <div class="the-standard">
@@ -32,8 +32,8 @@ js: '/service-manual/assets/javascript/search.js'
 
 <div class="browse-highlights">
   <div>
-    <h2>Some background</h2>
-    <p>Find out why we need to think differently about digital delivery,<br> and how this manual will help.</p>
+    <h2>A new way of doing things</h2>
+    <p>This guide explains why we need <br>to think differently about digital service delivery.</p>
     <p><a href="/service-manual/start">Find out more &raquo;</a></p>
   </div>
   <div>
