--- a/service-manual/index.html
+++ b/service-manual/index.html
@@ -14,10 +14,10 @@ category: home
 </div>
 
 <header class="page-header group">
-  <hgroup>
+  <div class="hgroup">
     <h1>Government Service Design Manual</h1>
     <h2 class="subtitle">Build services so good that people prefer to use them</h2>
-  </hgroup>
+  </div>
 </header>
 
 <div class="homepage-column">
