Add page 'What is a service?'

--- a/service-manual/index.html
+++ b/service-manual/index.html
@@ -33,7 +33,22 @@ category: home
   </div>
 </div>
 
-<div class="timeline">
+<div class="homepage-column-right">
+  <div class="inner">
+    <div class="intro">
+      <h2>What is a service?</h2>
+
+      <p>What do we mean when we talk about ‘services’?<br />
+      What makes a good government service?<br />
+      &nbsp;</p>
+
+      <p><a href="/service-manual/services">Find out more</a></p>
+
+    </div>
+  </div>
+</div>
+
+<div class="homepage-column-right">
   <div class="inner">
     <div class="service-life">
       <h2><a href="/service-manual/phases">Making a service</a></h2>
@@ -45,6 +60,7 @@ category: home
     </div>
   </div>
 </div>
+
 
 <div class="homepage-column">
   <div class="inner">
